# skill-packs

./: README.md
.github/workflows/: verify-skills.yml
harvester-scripts/: auto_harvester.py  bounty_radar.py  community_executor.py
harvester-scripts/tests/: test_scripts.py
python-project/: bounty_parser.py  community_bot.py  github_api.py
python-project/tests/: test_bounty.py
rust-project/: Cargo.toml
rust-project/src/: lib.rs
skills/community-bounty-bot/: SKILL.md
skills/pr-craftsman/: SKILL.md
skills/python-bounty-contributor/: SKILL.md
skills/rust-developer/: SKILL.md
skills/rustchain-bounty/: SKILL.md
skills/stealth-login/: SKILL.md  test_stealth_login.py
skills/stealth-login/stealth_login/: __init__.py  captcha_solver.py  config.py  discord_login.py  session.py  stealth.py  twitter_login.py  vision.py
