[package]
name = "rustchain-skill-verify"
version = "0.1.0"
edition = "2021"
description = "Verification build for rust-developer skill templates"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
thiserror = "1"

[dev-dependencies]
